# stock_scraper

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: stock_list.json
scripts/: get_historical_prices.py
src/stock_scraper/: __init__.py  config_loader.py  main.py
src/stock_scraper/api/: router.py  scheduler.py  set_stock_features.py  set_stock_instance.py
src/stock_scraper/domain/: execute_cli.py  stock_model.py
src/stock_scraper/domain/factory/: dataclass_stock_factory.py
src/stock_scraper/domain/models/: stock_models.py
src/stock_scraper/domain/services/: set_stock_features.py
src/stock_scraper/infrastructure/: get_stockPrice.py  url_builder.py
src/stock_scraper/infrastructure/db/: connect.py  create_table.py  fetch_stock_instanse.py  insert_stock_instanse.py
src/stock_scraper/infrastructure/streamlit/: ex001.py
src/stock_scraper/presentation/: entorypoint.py  get_save_stock_price.py  while_requests.py
src/stock_scraper/scraping/: base_scraper.py  scraping.py  test_scraping.py
src/stock_scraper/scraping/apis/: alpha_vantage.py  finhub.py  yahoo_finance.py
src/stock_scraper/usecase/: build_message.py  getStockprice.py  scraping.py  set_stock_feature.py  url_builder.py
src/stock_scraper/usecase/AlphaVantage/: url_builder.py
src/stock_scraper/usecase/YahooFinance/: url_builder.py
terraform/: aurora.tf  rds.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf  vpc.tf
