[project]
name = "stock-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.3"
dependencies = [
    "aiohttp==3.9.3",
    "apscheduler>=3.11.0",
    "python-dotenv==1.0.1",
]

[project.scripts]
stock-scraper = "stock_scraper:main.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
