[project]
name = "stock-scraper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.3"
dependencies = [
    "aiohttp==3.9.3",
    "apscheduler==3.11.0",
    "boto3==1.35.23",
    "fastapi==0.110.0",
    "python-dotenv==1.0.1",
    "asyncpg==0.30.0",
    "uvicorn==0.27.1",
    "streamlit==1.45.0",
    "nest-asyncio==1.5.8",
]

[project.scripts]
stock-scraper = "stock_scraper:main.main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/stock_scraper", "scripts", "tests"]
